Add cache for finding song by a service
