# src/SpotifyProxy.WebService/Controllers/SongController.cs
@@ -14,19 +14,26 @@ public class SongController : ControllerBase
 
     public SongController(IStreamingServiceClient client) => _client = client;
 
+    [HttpGet("Id")]
+    [ProducesResponseType(StatusCodes.Status400BadRequest, Type = typeof(string))]
+    [ProducesResponseType(StatusCodes.Status401Unauthorized, Type = typeof(string))]
+    [ProducesResponseType(StatusCodes.Status200OK, Type = typeof(SongResponseDto))]
+    public async Task<IActionResult> GetByUrl([FromQuery] GetByIdRequestDto model)
+        => Ok(await _client.GetTrackByIdAsync(model));
+
     [HttpGet("Url")]
     [ProducesResponseType(StatusCodes.Status400BadRequest, Type = typeof(string))]
     [ProducesResponseType(StatusCodes.Status401Unauthorized, Type = typeof(string))]
     [ProducesResponseType(StatusCodes.Status200OK, Type = typeof(SongResponseDto))]
     public async Task<IActionResult> GetByUrl([FromQuery] GetByUrlRequestDto model)
-        => Ok(await _client.GetSongByUrlAsync(model));
+        => Ok(await _client.GetTrackByUrlAsync(model));
 
     [HttpGet("Isrc")]
     [ProducesResponseType(StatusCodes.Status400BadRequest, Type = typeof(string))]
     [ProducesResponseType(StatusCodes.Status401Unauthorized, Type = typeof(string))]
     [ProducesResponseType(StatusCodes.Status200OK, Type = typeof(SongResponseDto))]
     public async Task<IActionResult> GetByIsrc([FromQuery] GetByIsrcRequestDto model)
-    => Ok(await _client.GetSongByIsrcAsync(model));
+    => Ok(await _client.GetTrackByIsrcAsync(model));
 
     [HttpGet("Find")]
     [ProducesResponseType(StatusCodes.Status404NotFound, Type = typeof(string))]
